--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -31,7 +31,7 @@ jobs:
     env:
       IMAGE_NAME: zhaohui
 
-    setps:
+    steps:
       - uses: actions/checkout@v4
 
       - name: Log in to Docker Hub
