--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -25,6 +25,12 @@ jobs:
       - name: Run Tests
         run: mvn test --file pom.xml
 
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: spring-boot-app
+          path: target/zhaohui-0.0.1-SNAPSHOT.jar
+
   docker:
     needs: build
     runs-on: ubuntu-latest
@@ -33,6 +39,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Download JAR artifact
+        uses: actions/downoad-artifact@v4
+        with:
+          name: spring-boot-app
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
