--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,4 +1,4 @@
-name: Spring Boot CI
+name: Spring Boot CI/CD
 
 on:
   push:
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Download JAR artifact
-        uses: actions/downoad-artifact@v4
+        uses: actions/download-artifact@v4
         with:
           name: spring-boot-app
 
